--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 </head>
 <body>
     <header>
-
+        <h2 class="main-headline">Customize Your Daily Routine</h2>
     </header>
+
+    <section class="form-todo-section">
+    <form class="form-todo" >
+        <div class="container">
+            <h2 class="heading2">Stay Organized</h2>
+        <div class="form-container">
+        <input type="text" placeholder="write your task here..">
+        <button class=" btn">Add More</button>
+        </div>
+    </div>
+    </form>
+</section>
+
+    
+    <form class="form-signUp">
+        <div class="container">
+        <input type="text" placeholder="Enter ur name ">
+        <input type="email" placeholder="Enter ur email ">
+    </div>
+    </form>
+
 </body>
 </html>
