some files are modified

--- a/index.html
+++ b/index.html
@@ -24,13 +24,23 @@
     </form>
 </section>
 
-    
+    <!-- <section class="form-signUp-section">
+
     <form class="form-signUp">
+
         <div class="container">
+            <h2>SignUp Form</h2>
+            <div class="signup">
         <input type="text" placeholder="Enter ur name ">
+        <br>
         <input type="email" placeholder="Enter ur email ">
+        <br>
+        <button class="signup-btn btn">Submit</button>
     </div>
+    </div>
+
     </form>
+</section> -->
 
 </body>
 </html>
