--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
         </div>
     </div>
     </form>
+    <div class="container">
+        <ul class="li-item">
+            <!-- <li>
+                <input type="text">
+                <div>
+                    <button class="btn li-btn1">Done</button>
+                    <button class="btn li-btn2">Remove</button>
+                </div>
+            </li> -->
+           
+        </ul>
+    </div>
 </section>
+
 
     <!-- <section class="form-signUp-section">
 
