some files are modified

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <h2 class="heading2">Stay Organized</h2>
         <div class="form-container">
         <input type="text" placeholder="write your task here..">
-        <button class=" btn">Add More</button>
+        <button class=" btn add-btn">Add More</button>
         </div>
     </div>
     </form>
     <div class="container">
         <ul class="li-item">
-            <!-- <li>
-                <input type="text">
+            <li>
+                <span class="text"></span>
                 <div>
-                    <button class="btn li-btn1">Done</button>
-                    <button class="btn li-btn2">Remove</button>
+                    <button class="btn done li-btn1">Done</button>
+                    <button class="btn remove li-btn2">Remove</button>
                 </div>
-            </li> -->
+            </li>
            
         </ul>
     </div>
